# my-entries

./: .devcontainer.json  .gitignore  Dockerfile  Makefile  docker-compose.base.yml  docker-compose.devcontainer.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.github/workflows/: deploy.yml  main.yml
alembic/: env.py
alembic/versions/: 5ed4405ac1fa_add_repeat_interval_column.py  9ecd0a57bb68_add_concept_column.py  c3af754719ed_create_entries_table.py  c8015dac496b_add_repeat_forever_column.py  ee05c59b0e4a_add_repeted_column.py
app/: main.py
app/clients/: __init__.py  click_up.py
app/controllers/: __init__.py  click_up.py
app/core/: __init__.py  server.py  settings.py
app/routers/: __init__.py
app/routers/v1/: __init__.py
app/routers/v1/click_up/: __init__.py
app/schemas/: tag.py
backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: c9c324f1a4ab_create_entries_table.py
backend/source/: __main__.py
backend/source/entities/: __init__.py  entries.py  entry.py  environment.py  tag.py
backend/source/frameworks_and_drivers/database/: __init__.py  __main__.py
backend/source/frameworks_and_drivers/database/migrations/: env.py
backend/source/frameworks_and_drivers/web/: __init__.py  __main__.py  dependencies.py  enums.py  settings.py
backend/source/frameworks_and_drivers/web/routers/: __init__.py
backend/source/frameworks_and_drivers/web/routers/v1/: __init__.py  entries.py
backend/source/interface_adapters/controllers/: entries.py  entry.py
backend/source/interface_adapters/gateways/: entries.py  entry.py
envs/: template.env
frontend/: .env.example  Dockerfile  Makefile  pyproject.toml
frontend/source/: __main__.py
frontend/source/frameworks_and_drivers/external_interfaces/: __init__.py
frontend/source/frameworks_and_drivers/external_interfaces/backend/: __init__.py  client.py  models.py  settings.py
frontend/source/frameworks_and_drivers/user_interface/: __init__.py  __main__.py
frontend/source/frameworks_and_drivers/user_interface/molecules/: amount_number_input.py  concept_text_input.py  due_date_input.py  frequency_radio.py  repeat_count_number_input.py  repeat_interval_number_input.py  status_selectbox.py
frontend/source/frameworks_and_drivers/user_interface/organisms/: add_entry_dialog.py  delete_entry_dialog.py  entries_data_editor.py  statistics_metrics.py  update_amount_inside_cajita_dialog.py
frontend/source/frameworks_and_drivers/user_interface/pages/: home.py
frontend/source/frameworks_and_drivers/user_interface/screens/: home.py
frontend/source/frameworks_and_drivers/user_interface/templates/: home.py
source/: main.py
source/app/: main.py
source/app/clients/: click_up.py
source/app/controllers/: __init__.py  click_up.py
source/app/core/: __init__.py  dependency.py  settings.py
source/app/helpers/: workbook.py  worksheet.py
source/app/router/: __init__.py
source/app/router/v1/click_up/: __init__.py
source/entities/: entries.py  entry.py
source/frameworks_and_devices/database/: __init__.py  session.py  settings.py
source/frameworks_and_devices/web/: __init__.py  settings.py
source/frameworks_and_devices/web/api/: __init__.py
source/frameworks_and_devices/web/api/routers/: __init__.py
source/frameworks_and_devices/web/api/routers/v1/: entries.py
source/interface_adapters/controllers/: entries.py  entry.py
source/interface_adapters/gateways/: entries.py  entry.py
source/requirements/: base.txt  dev.txt
