[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marco Carmona <marcocarmonapy@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvloop = "^0.19.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
