[project]
name = "my-entries-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.2",
    "orjson>=3.10.9",
    "pydantic-settings>=2.6.0",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy-libsql>=0.1.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = ["python-dotenv[cli]>=1.0.1", "ruff>=0.7.0"]
