[tool.poetry]
name = "frontend"
version = "0.1.3"
description = ""
authors = ["Marco Carmona <marcocarmonadev@outlook.com>"]
readme = "README.md"
packages = [{ "include" = "source" }]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pydantic-settings = "^2.3.3"
pydantic = "^2.7.4"

[tool.poetry.scripts]
my-entries-frontend = "source.frameworks_and_drivers.user_interface.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
