[tool.poetry]
name = "my-entries-frontend"
version = "0.1.3"
description = ""
authors = ["Marco Carmona <marcocarmonadev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pydantic-settings = "^2.3.3"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
python-dotenv = {extras = ["cli"], version = "^1.0.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
